--- a/energy_integration.org
+++ b/energy_integration.org
@@ -21,8 +21,9 @@
 | PureGlyc    |            15.9 |        225.4 |     3.58386 |
 | XylFeed     |           26.38 |        178.1 |    4.698278 |
 | FurFeed     |          105.52 |        96.41 |   10.173183 |
-| Cyclo       |           24.61 |       112.71 |   2.7737931 |
-| CyclWater   |           106.9 |        76.12 |    8.137228 |
+| CyclReac    |          132.66 |       113.57 |   15.066196 |
+| Cycl        |              26 |       179.83 |     4.67558 |
+| Tol         |           51.02 |       163.07 |   8.3198314 |
 #+TBLFM: $4=($2*$3)/1000
 
 Επίσης, μπορεί να κατασκευαστεί και ο πίνακας των ανηγμένων θερμοκρασιών του συστήματος
@@ -44,33 +45,33 @@
 | PureGlycerol | Θερμό |    283.9 |        25 |
 | XylFeed      | Ψυχρό |      237 |       248 |
 | FurFeed      | Θερμό |      238 |       155 |
-| Cyclo        | Θερμό |    262.8 |        25 |
-| CyclWater    | Θερμό |    196.5 |        25 |
+| CyclReac     | Θερμό |      155 |        25 |
+| Cycl         | Θερμό |      125 |        25 |
+| Tol          | Θερμό |       45 |        25 |
 
 Βλέπουμε κάθε θερμοκρασιακό interval που ορίζουν τα ρεύματα αυτά, υπολογίζουμε το συνολικό θερμό και ψυχρό Cp στο καθένα, το αφαιρούμε και υπολογίζουμε την ενθαλπία κάθε ρεύματος.
 
 #+CAPTION: Χαρακτηρισμός των "ψευδο"-ρευμάτων του ενεργειακού καταρράκτη
 |   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
 |-------+-------+-------+---------+---------+---------+------------|
-| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |   -75.6224 |
-| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |   -94.0984 |
-|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |      -16.6 |
-|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |    -11.833 |
-|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |     312.01 |
-|   227 | 196.5 |  30.5 |  47.732 |  89.673 | -41.941 | -1279.2005 |
-| 196.5 |   155 |  41.5 |  47.732 |  97.810 | -50.078 |  -2078.237 |
-|   155 |   145 |    10 |  47.732 |  87.637 | -39.905 |    -399.05 |
-|   145 | 139.4 |   5.6 | 105.479 |  87.637 |  17.842 |    99.9152 |
-| 139.4 |   135 |   4.4 | 105.479 |  88.377 |  17.102 |    75.2488 |
-|   135 | 85.65 | 49.35 | 105.479 | 142.058 | -36.579 | -1805.1737 |
-| 85.65 | 75.65 |   10. | 111.537 | 142.058 | -30.521 |    -305.21 |
-| 75.65 |  74.9 |  0.75 | 111.537 | 139.288 | -27.751 |  -20.81325 |
-|  74.9 |  64.9 |   10. | 115.730 | 139.288 | -23.558 |    -235.58 |
-|  64.9 | 56.97 |  7.93 | 115.730 | 134.403 | -18.673 | -148.07689 |
-| 56.97 | 54.75 |  2.22 | 115.730 | 138.217 | -22.487 |  -49.92114 |
-| 54.75 |    45 |  9.75 | 169.627 | 138.217 |   31.41 |   306.2475 |
-|    45 |    35 |    10 | 169.627 | 187.872 | -18.245 |    -182.45 |
-|    35 |    25 |    10 | 111.880 | 187.872 | -75.992 |    -759.92 |
+| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 |  -128.6656 |
+|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |      11.14 |
+|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |     -9.059 |
+|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |     339.75 |
+|   227 |   155 |    72 |  47.732 |  83.315 | -35.583 |  -2561.976 |
+|   155 |   145 |    10 |  47.732 |  91.792 |  -44.06 |     -440.6 |
+|   145 | 139.4 |   5.6 | 105.479 |  91.792 |  13.687 |    76.6472 |
+| 139.4 |   135 |   4.4 | 105.479 |  92.532 |  12.947 |    56.9668 |
+|   135 |   125 |    10 | 105.479 | 161.279 |   -55.8 |      -558. |
+|   125 | 85.65 | 39.35 | 105.479 | 150.889 |  -45.41 | -1786.8835 |
+| 85.65 | 75.65 |   10. | 111.537 | 150.889 | -39.352 |    -393.52 |
+| 75.65 |  74.9 |  0.75 | 111.537 | 148.119 | -36.582 |   -27.4365 |
+|  74.9 |  64.9 |   10. | 115.730 | 148.119 | -32.389 |    -323.89 |
+|  64.9 | 56.97 |  7.93 | 115.730 | 143.233 | -27.503 | -218.09879 |
+| 56.97 | 54.75 |  2.22 | 115.730 | 147.048 | -31.318 |  -69.52596 |
+| 54.75 |    45 |  9.75 | 169.627 | 147.048 |  22.579 |  220.14525 |
+|    45 |    35 |    10 | 169.627 | 208.023 | -38.396 |    -383.96 |
+|    35 |    25 |    10 | 111.880 | 208.023 | -96.143 |    -961.43 |
 #+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
 
 * Αποτελέσματα - Γραφήματα
@@ -79,25 +80,36 @@
 #+ATTR_ORG: :width 700px
 [[./Diagrams/energy_cascade.svg]]
 
-Έπειτα, χρησιμοποιείται ο παρακάτω κώδικας octave για να δημιουργήσει το μεγάλο σύνθετο γράφημα της διεργασίας ([[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/grand_composite_curve.png][Δείτε εδώ από github]]).
+Από τον παρακάτω πίνακα, αν dH ο πίνακας των ενθαλπιών, μπορεί να υπολογιστεί η ενεργειακή στάθμη για το μεγάλο σύνθετο γράφημα από τον κώδικα
+~cumdH = -min(cumsum(-dH)) + cumsum(-dH)~
+από τα οποία προκύπτει ο πίνακας
 
-#+BEGIN_SRC octave :results file
-
-  T = [25, 35, 45, 54.75, 56.97, 64.9, 74.9, 75.65, 85.65, 135, 139.4, 145, 155, 196.5, 227, 237, 238, 248, 262.8, 283.9]
-  Dh = [6.782e+3, 6.022e+3, 5.840e+3, 6.146e+3, 6.096e+3, 5.948e+3, 5.713e+3, 5.692e+3, 5.387e+3, 3.581e+3, 3.657e+3, 3.757e+3, 3.357e+3, 1.279e+3, 0, 3.120e+2, 3.002e+2, 2.836e+2, 1.895e+2, 1.139e+2]
-  figure( 1, "visible", "off" );
-  plot(Dh, T)
-  xlabel("Ενθαλπία [MJ/h]")
-  ylabel("Θερμοκρασία [C]")
-  #set(gca, 'ytick', T_tick)
-  print -dpng Diagrams/grand_composite_curve.png;
-  ans = "Diagrams/grand_composite_curve.png";
-
-#+END_SRC
+#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
+#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative  Dh |     T |
+|----------------+-------|
+|        213.165 | 283.9 |
+|        341.831 |   248 |
+|        330.691 |   238 |
+|        339.750 |   237 |
+|              0 |   227 |
+|       2561.976 |   155 |
+|       3002.576 |   145 |
+|       2925.928 | 139.4 |
+|       2868.962 |   135 |
+|       3426.962 |   125 |
+|       5213.845 | 85.65 |
+|       5607.365 | 75.65 |
+|       5634.802 |  74.9 |
+|       5958.692 |  64.9 |
+|       6176.790 | 56.97 |
+|       6246.316 | 54.75 |
+|       6026.171 |    45 |
+|       6410.131 |    35 |
+|       7371.561 |    25 |
 
 #+CAPTION: Μεγάλο Σύνθετο Γράφημα
-#+ATTR_ORG: :width 700px
-#+RESULTS:
+#+ATTR_ORG: :width 600px
 [[file:Diagrams/grand_composite_curve.png]]
 
 Με τα ρεύματα αυτά ως έχουν, προκύπτει ότι απαιτείται μία μεγάλη ποσότητα ψυχρής παροχής και μικρή ποσότητα θερμής. Αυτό είναι ανεπιθύμητο επειδή η μονάδα έχει διαθέσιμη θερμή παροχή δωρεάν ενώ το ίδιο δεν ισχύει για την ψυχρή παροχή. Βέβαια, πολύ από αυτήν την απαίτηση οφείλεται στην εκμετάλλευση του θερμικού περιεχομένου των προιόντων τα οποία δεν είναι ανάγκη να ψυχθούν και τα εκμεταλλευόμαστε μόνο αν βοηθάνε.
@@ -109,51 +121,49 @@
 #+CAPTION: Καταρράκτης χωρίς steam explosion vapors
 |   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |        ΔΗ |
 |-------+-------+-------+---------+---------+---------+-----------|
-| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |  -75.6224 |
-| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |  -94.0984 |
-|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |     -16.6 |
-|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |   -11.833 |
-|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |    312.01 |
-|   227 | 196.5 |  30.5 |  47.732 |  24.186 |  23.546 |   718.153 |
-| 196.5 |   155 |  41.5 |  47.732 |  32.323 |  15.409 |  639.4735 |
-|   155 |   145 |    10 |  47.732 |  22.150 |  25.582 |    255.82 |
-|   145 | 139.4 |   5.6 | 105.479 |  22.150 |  83.329 |  466.6424 |
-| 139.4 |   135 |   4.4 | 105.479 |  22.890 |  82.589 |  363.3916 |
-|   135 | 85.65 | 49.35 | 105.479 |  76.571 |  28.908 | 1426.6098 |
-| 85.65 | 75.65 |   10. | 111.537 |  76.571 |  34.966 |    349.66 |
-| 75.65 |  74.9 |  0.75 | 111.537 |  73.801 |  37.736 |    28.302 |
-|  74.9 |  64.9 |   10. | 115.730 |  73.801 |  41.929 |    419.29 |
-|  64.9 | 56.97 |  7.93 | 115.730 |  68.916 |  46.814 | 371.23502 |
-| 56.97 | 54.75 |  2.22 | 115.730 |  72.730 |     43. |     95.46 |
-| 54.75 |    45 |  9.75 | 169.627 |  72.730 |  96.897 | 944.74575 |
-|    45 |    35 |    10 | 169.627 | 122.385 |  47.242 |    472.42 |
-|    35 |    25 |    10 | 111.880 | 122.385 | -10.505 |   -105.05 |
+| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 | -128.6656 |
+|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |     11.14 |
+|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |    -9.059 |
+|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |    339.75 |
+|   227 |   155 |    72 |  47.732 |  17.828 |  29.904 |  2153.088 |
+|   155 |   145 |    10 |  47.732 |  26.305 |  21.427 |    214.27 |
+|   145 | 139.4 |   5.6 | 105.479 |  26.305 |  79.174 |  443.3744 |
+| 139.4 |   135 |   4.4 | 105.479 |  27.045 |  78.434 |  345.1096 |
+|   135 |   125 |    10 | 105.479 |  95.792 |   9.687 |     96.87 |
+|   125 | 85.65 | 39.35 | 105.479 |  85.402 |  20.077 | 790.02995 |
+| 85.65 | 75.65 |   10. | 111.537 |  85.402 |  26.135 |    261.35 |
+| 75.65 |  74.9 |  0.75 | 111.537 |  82.632 |  28.905 |  21.67875 |
+|  74.9 |  64.9 |   10. | 115.730 |  82.632 |  33.098 |    330.98 |
+|  64.9 | 56.97 |  7.93 | 115.730 |  77.746 |  37.984 | 301.21312 |
+| 56.97 | 54.75 |  2.22 | 115.730 |  81.561 |  34.169 |  75.85518 |
+| 54.75 |    45 |  9.75 | 169.627 |  81.561 |  88.066 |  858.6435 |
+|    45 |    35 |    10 | 169.627 | 142.536 |  27.091 |    270.91 |
+|    35 |    25 |    10 | 111.880 | 142.536 | -30.656 |   -306.56 |
 #+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
 
 #+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
 #+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
 | Cumulative  Dh |     T |
 |----------------+-------|
-|       6665.059 | 283.9 |
-|       6740.681 | 262.8 |
-|       6834.780 |   248 |
-|       6851.380 |   238 |
-|       6863.213 |   237 |
-|       6551.203 |   227 |
-|       5833.050 | 196.5 |
-|       5193.576 |   155 |
-|       4937.756 |   145 |
-|       4471.114 | 139.4 |
-|       4107.722 |   135 |
-|       2681.112 | 85.65 |
-|       2331.452 | 75.65 |
-|       2303.150 | 74.90 |
-|       1883.860 |  64.9 |
-|       1512.625 | 56.97 |
-|       1417.165 | 54.75 |
-|         472.42 |    45 |
+|       6376.537 | 283.9 |
+|       6505.203 |   248 |
+|       6494.063 |   238 |
+|       6503.122 |   237 |
+|       6163.372 |   227 |
+|       4010.284 |   155 |
+|       3796.014 |   145 |
+|       3352.640 | 139.4 |
+|       3007.530 |   135 |
+|       2910.660 |   125 |
+|       2120.630 | 85.65 |
+|       1859.280 | 75.65 |
+|       1837.601 |  74.9 |
+|       1506.621 |  64.9 |
+|       1205.408 | 56.97 |
+|       1129.553 | 54.75 |
+|         270.91 |    45 |
 |              0 |    35 |
-|         105.05 |    25 |
+|         306.56 |    25 |
 
 #+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
 #+ATTR_ORG: :width 700px
@@ -162,53 +172,51 @@
 Με βάση το αποτέλεσμα αυτό, θεωρείται ότι υπάρχει περιθώριο να εκμεταλλευτούμε το θερμό ρεύμα που παραλείψαμε (καθώς υπάρχει μία σχετικά μεγάλη απαίτηση σε θερμό), αλλά δεν υπάρχει λόγος να ψυχθεί αυτό μέχρι χαμηλή θερμοκρασία επειδή όσο περισσότερο ψύχεται, τόσο περισσότερη ψυχρή παροχή θα θέλουμε. Από τους παραπάνω υπολογισμούς, βλέπουμε ότι η συνολική θερμοχωρητικότητα των θερμών είναι χαμηλή μέχρι τους 135 \( ^oC \) και μετά, που αρχίζουν να ψύχονται οι ατμοί του flash από τον καθαρισμό της γλυκερόλης, οι οποίοι έχουν υψηλή θερμοχωρητικότητα, υπάρχει αρκετή θερμή παροχή. Άρα, είναι αρκετά πιθανό η ψύξη των ατμών του steam explosion μέχρι τους 135 \( ^oC \) στο ΜΣΓ (δηλαδή 140 \( ^oC \)) να είναι βοηθητική, μειώνοντας σημαντικά την απαίτηση σε θερμή παροχή χωρίς να αυξάνει πολύ την απαίτηση σε ψυχρή βοηθητική παροχή.
 
 #+CAPTION: Καταρράκτης με μερική ψύξη των ατμών του steam explosion
-|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
-|-------+-------+-------+---------+---------+---------+------------|
-| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |   -75.6224 |
-| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |   -94.0984 |
-|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |      -16.6 |
-|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |    -11.833 |
-|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |     312.01 |
-|   227 | 196.5 |  30.5 |  47.732 |  89.673 | -41.941 | -1279.2005 |
-| 196.5 |   155 |  41.5 |  47.732 |  97.810 | -50.078 |  -2078.237 |
-|   155 |   145 |    10 |  47.732 |  87.637 | -39.905 |    -399.05 |
-|   145 | 139.4 |   5.6 | 105.479 |  87.637 |  17.842 |    99.9152 |
-| 139.4 |   135 |   4.4 | 105.479 |  88.377 |  17.102 |    75.2488 |
-|   135 | 85.65 | 49.35 | 105.479 |  76.571 |  28.908 |  1426.6098 |
-| 85.65 | 75.65 |   10. | 111.537 |  76.571 |  34.966 |     349.66 |
-| 75.65 |  74.9 |  0.75 | 111.537 |  73.801 |  37.736 |     28.302 |
-|  74.9 |  64.9 |   10. | 115.730 |  73.801 |  41.929 |     419.29 |
-|  64.9 | 56.97 |  7.93 | 115.730 |  68.916 |  46.814 |  371.23502 |
-| 56.97 | 54.75 |  2.22 | 115.730 |  72.730 |     43. |      95.46 |
-| 54.75 |    45 |  9.75 | 169.627 |  72.730 |  96.897 |  944.74575 |
-|    45 |    35 |    10 | 169.627 | 122.385 |  47.242 |     472.42 |
-|    35 |    25 |    10 | 111.880 | 122.385 | -10.505 |    -105.05 |
+|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |        ΔΗ |
+|-------+-------+-------+---------+---------+---------+-----------|
+| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 | -128.6656 |
+|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |     11.14 |
+|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |    -9.059 |
+|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |    339.75 |
+|   227 |   155 |    72 |  47.732 |  83.315 | -35.583 | -2561.976 |
+|   155 |   145 |    10 |  47.732 |  91.792 |  -44.06 |    -440.6 |
+|   145 | 139.4 |   5.6 | 105.479 |  91.792 |  13.687 |   76.6472 |
+| 139.4 |   135 |   4.4 | 105.479 |  92.532 |  12.947 |   56.9668 |
+|   135 |   125 |    10 | 105.479 |  95.792 |   9.687 |     96.87 |
+|   125 | 85.65 | 39.35 | 105.479 |  85.402 |  20.077 | 790.02995 |
+| 85.65 | 75.65 |   10. | 111.537 |  85.402 |  26.135 |    261.35 |
+| 75.65 |  74.9 |  0.75 | 111.537 |  82.632 |  28.905 |  21.67875 |
+|  74.9 |  64.9 |   10. | 115.730 |  82.632 |  33.098 |    330.98 |
+|  64.9 | 56.97 |  7.93 | 115.730 |  77.746 |  37.984 | 301.21312 |
+| 56.97 | 54.75 |  2.22 | 115.730 |  81.561 |  34.169 |  75.85518 |
+| 54.75 |    45 |  9.75 | 169.627 |  81.561 |  88.066 |  858.6435 |
+|    45 |    35 |    10 | 169.627 | 142.536 |  27.091 |    270.91 |
+|    35 |    25 |    10 | 111.880 | 142.536 | -30.656 |   -306.56 |
 #+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
 
 #+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
 #+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
 | Cumulative  Dh |     T |
 |----------------+-------|
-|       640.2552 | 283.9 |
-|       715.8776 | 262.8 |
-|       809.9760 |   248 |
-|       826.5760 |   238 |
-|       838.4090 |   237 |
-|       526.3990 |   227 |
-|      1805.5995 | 196.5 |
-|      3883.8365 |   155 |
-|      4282.8865 |   145 |
-|      4182.9713 | 139.4 |
-|      4107.7225 |   135 |
-|      2681.1127 | 85.65 |
-|      2331.4527 | 75.65 |
-|      2303.1507 | 74.90 |
-|      1883.8607 |  64.9 |
-|      1512.6257 | 56.97 |
-|      1417.1657 | 54.75 |
-|         472.42 |    45 |
+|        351.734 | 283.9 |
+|        480.399 |   248 |
+|        469.259 |   238 |
+|        478.318 |   237 |
+|        138.568 |   227 |
+|       2700.544 |   155 |
+|       3141.144 |   145 |
+|       3064.497 | 139.4 |
+|       3007.530 |   135 |
+|       2910.660 |   125 |
+|       2120.630 | 85.65 |
+|       1859.280 | 75.65 |
+|       1837.601 |  74.9 |
+|       1506.621 |  64.9 |
+|       1205.408 | 56.97 |
+|       1129.553 | 54.75 |
+|         270.91 |    45 |
 |              0 |    35 |
-|         105.05 |    25 |
+|         306.56 |    25 |
 
 #+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
 #+ATTR_ORG: :width 700px
@@ -217,20 +225,36 @@
 * Συμπεράσματα
 Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση αυτή, η οποία θεωρείται και η καλύτερη, οι ενεργειακές απαιτήσεις της διεργασίας γίνονται
 
-Απαίτηση σε ψυχρή παροχή 105.05 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
+Απαίτηση σε ψυχρή παροχή 306.56 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
 
-Απαίτηση σε θερμή παροχή: 640.26 MJ/h. Αν εκμεταλλευτούμε την μικρή τσέπη που δημιουργείται στο πάνω μέρος του ΜΣΓ, τότε η θερμή παροχή πρέπει να διατίθεται τουλάχιστον στους 230 \( ^oC \) σε αυτό (δηλαδή τουλάχιστον 235 \( ^oC \) αν χρησιμοποιούμε την πραγματική θερμοκρασία), αλλιώς πρέπει να διατίθεται στους 284 \( ^oC \) τουλάχιστον. Βέβαια, ένα σημαντικό ποσό της απαίτησης (472.42 MJ/h) είναι σε πολύ χαμηλή θερμοκρασία (θέρμανση από τους 35 \( ^oC \) στους 45 \( ^oC \)), άρα, υπάρχει πιθανότητα εκτόνωσης του ατμού μετά την χρήση του για τα πιο ζεστά ρεύματα.
+Απαίτηση σε θερμή παροχή: 351.73 MJ/h. Αν εκμεταλλευτούμε την μικρή τσέπη που δημιουργείται στο πάνω μέρος του ΜΣΓ, τότε η θερμή παροχή πρέπει να διατίθεται τουλάχιστον στους 235 \( ^oC \) σε αυτό (δηλαδή τουλάχιστον 240 \( ^oC \) αν χρησιμοποιούμε την πραγματική θερμοκρασία), αλλιώς πρέπει να διατίθεται στους 284 \( ^oC \) τουλάχιστον. 
 
 Επίσης, πέρα από αυτήν την ενεργειακή τσέπη η οποία έχει δημιουργηθεί και επιτρέπει ο ατμός που παράγεται να είναι σε χαμηλότερη ενεργειακή στάθμη, υπάρχει και άλλη μία, η οποία είναι πάρα πολύ σημαντικής έκτασης και επιτρέπει την πλήρη ενεργειακή αυτονομία όλων των ρευμάτων από 227 \( ^oC \) μέχρι λίγο πάνω από 45 \( ^oC \).
 
-Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης). Άρα, πρακτικά δεν θα άξιζε να τοποθετηθεί σε κανένα σημείο της διεργασίας μία αντλία θερμότητας. Από ενδόθερμους αντιδραστήρες, ο αντιδραστήρας της παραγωγής κυκλοπεντανόνης είναι ο μόνος ενδόθερμος αντιδραστήρας, άρα αυτός δεν θα μπορεί να ολοκληρωθεί σε καμία περίπτωση. Αλλά και να υπήρχε σημαντικό κομμάτι κάτω από τον κόμβο ανάσχεσης, η θερμοκρασία λειτουργίας του αντιδραστήρα (160 \( ^oC \)) είναι πολύ μεγαλύτερη από αυτή του κόμβου ανάσχεσης.
+Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης).
 
 ** Σχόλια για την ολοκλήρωση διάφορων κομματιών
 *** Αντιδραστήρας παραγωγής γλυκερόλης
-Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς).
+Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς). Ακόμη όμως και να γινόταν, η απαίτηση σε ψύξη είναι υψηλή (12901.5 MJ/hr) και με την υπάρχουσα διεργασία και ολοκλήρωση, δεν περισσεύει πουθενά τόση ψυχρή παροχή.
+*** Αποστακτική στήλη γλυκερόλης
+Ο συμπηκνωτήρας της στήλης λειτουργεί στους 145 \( ^oC \) (140 \( ^oC \) στο ΜΣΓ). Στο σημείο αυτό είναι η μεγάλη ενεργειακή τσέπη του ΜΣΓ, άρα η ολοκλήρωση είναι αρκετά εύκολη. Επίσης, η απαίτηση σε ψύξη είναι σχετικά μικρή (149.49 MJ/hr) άρα η στήλη θα μπορούσε να ολοκληρωθεί εκεί. Ο αναβραστήρας λειτουργεί στην υψηλότερη θερμοκρασία που υπάρχει στην διεργασία, και καθώς ο αναβραστήρας θεωρείται "ψυχρό ρεύμα", στο ΜΣΓ θα τοποθετηθεί στους 293 \( ^oC \). Άρα, απαιτείται μία θερμή βοηθητική παροχή στους 300 \( ^oC \) τουλάχιστον με θερμότητα 1105.44 MJ/hr. Αλλά και να υπήρχε διαθέσιμο θερμό ρεύμα, δεν είναι γενικά μία καλή πρακτική να ολοκληρώσουμε και τις δύο πλευρές τις αποστακτικής καθώς κάνει τον έλεγχο της στήλης πιο δύσκολο.
 *** Αντιδραστήρας παραγωγής φουρφουράλης
-Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν.
+Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν. Επίσης, η απαίτηση του σε ψύξη είναι αρκετά χαμηλή (13.35 MJ/hr) άρα είναι αρκετά εύκολο να χωρέσει.
+*** Αντιδραστήρας παραγωγής κυκλοπεντανόνης
+Ο αντιδραστήρας αυτός λειτουργεί στους 160 \( ^oC \) και είναι εξώθερμος (ως αντίδραση υδρογόνωσης). Στο σημείο αυτό υπάρχει διαθέσιμη θερμική ενέργεια λόγω της ενεργειακής τσέπης (της τάξης των 2500 MJ/hr). Βέβαια, ο θερμοτονισμός της αντίδρασης είναι μίας τάξης μεγέθους πάνω από την απαίτηση αυτή άρα δεν μπορεί να καλυφθεί η ανάγκη από τα υπάρχοντα ρεύματα.
 *** Αποστακτική στήλη κυκλοπεντανόνης
-Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν κατά πολύ την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί. Βέβαια ο διαχωρισμός αυτός έχει κατασταθεί πολύ δύσκολος λόγω της πολύ υψηλής πίεσης λειτουργίας. Αν ρίξουμε την πίεση αυτή και η απόσταξη γίνει σε ατμοσφαιρική πχ πίεση, είναι πιθανό να μπορεί να ολοκληρωθεί η στήλη καθώς οι θερμοκρασιακές περιοχές που κινείτε είναι κατάλληλες και θα είναι ακόμη καλύτερες αν μειωθεί η πίεση λειτουργίας.
+Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί. Η απαίτηση σε ψυχρό είναι 8999.76 MJ/hr, η οποία μπορεί να ικανοποιηθεί με νερό ψύξης ενώ αυτή σε θερμό είναι 9543.12 MJ/hr η οποία πρέπει να είναι ατμός σε θερμοκρασία τουλάχιστον 140 \( ^oC \). Εφόσον αυτή θα παραχθεί από το κύκλο Rankine, είναι εύκολο να ρυθμιστεί κατάλληλα.
 *** Αντιδραστήρας σακχαροποίησης
-Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι εξώθερμος (45 \( ^oC \) στο ΜΣΓ). Εφόσον είναι πάνω από τον κόμβο ανάσχεσης, μπορεί θεωρητικά να ολοκληρωθεί με την διεργασία. Όμως, με το παρόν ΜΣΓ, έχουμε διαθέσιμα 472.42 MJ/h θερμότητα διαθέσιμη στην θερμοκρασία αυτή ενώ με βάση τα αποτελέσματα του Aspen, το heat duty της διεργασίας είναι -2477 MJ/hr. Για να έχουμε το επιθυμητό θερμικό περιεχόμενο, θα έπρεπε η θερμοκρασία να αυξηθεί μέχρι τους 80 \( ^oC \) περίπου. Στις συνθήκες αυτές δεν μπορεί να επιζήσει καμία κυτταρινάση. Θεωρητικά, μπορεί να γίνει όξινη υδρόλυση της κυτταρίνης με καταλύτη θειικό οξύ με συνθήκες λειτουργίας 120 \( ^oC \) περίπου, η οποία θα μπορούσε να ολοκληρωθεί, όμως είναι γνωστό πως η όξινη προκατεργασία της βιομάζας ευνοεί την διάσπαση κυτταρίνης σε παραπροιόντα όπως η υδρόξυ-μέθυλο-φουρφουράλη (HMF) και τα προιόντα διάσπασης αυτής πέρα από την γλυκόζη, οι οποίες είναι ενώσεις που είναι γνωστές για την τοξικότητα τους προς μικροοργανισμούς. Ως αποτέλεσμα, θα έπρεπε να γίνει κάποιος επιπλέον διαχωρισμός για να ανακτηθεί καθαρή γλυκόζη στην περίπτωση αυτή. 
+Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι ενδόθερμος. Είναι πάνω από τον κόμβο ανάσχεσης, αλλά μέσα σε μία σχετικά μεγάλη ενεργειακή τσέπη. Στο σημείο αυτό της τσέπης υπάρχει διαθέσιμη περίπου 1000 MJ/hr θερμών παροχών και η απαίτηση του αντιδραστήρα είναι (393.63 MJ/hr) άρα η ολοκλήρωση θεωρείται εφικτή.
+
+** Απαίτηση σε θερμές παροχές
+Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των συμπιεστών, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 συμπιεστές στο κύκλο, άρα πάνω από 3 επίπεδα ατμού. Το χαμηλότερο επίπεδο χρησιμοποιείται για την αναγέννηση στο κύκλο και αύξηση της απόδοσης μετατροπής σε ηλεκτρισμό. Άρα, στην πράξη, μπορούμε να έχουμε 2 επίπεδα ατμού, και αρκεί να βρούμε ποιά θα είναι αυτά.
+
+#+CAPTION: Απαιτούμενα επίπεδα ατμού
+| Απαίτηση                     | Θερμότητα (MJ/hr) | Θερμοκρασία (C) |
+|------------------------------+-------------------+-----------------|
+| ΜΣΓ                          |               350 |             250 |
+| Αναβραστήρας Γλυκερόλης      |           1105.44 |             300 |
+| Αναβραστήρας Κυκλοπεντανόνης |           9543.12 |             140 |
+
+Από τα 3 ρεύματα αυτά, είναι εύκολο να παρατηρηθούν τα δύο επίπεδα που χρειάζονται. Το πρώτο πρέπει να είναι στους 300 \( ^oC \) τουλάχιστον με θερμική δυνατότητα σχεδόν 1500 MJ/hr ενώ το δεύτερο πρέπει να είναι στους 140 \( ^oC \) τουλάχιστον με θερμική δυνατότητα 9543.12 MJ/hr. Πιθανόν να τοποθετηθεί και λίγο παραπάνω ώστε να υπάρχει περιθώριο για την αναγέννηση. Εκτός αν η αναγέννηση αποτελέσει την 2η βαθμίδα και αυτό είναι η τρίτη.
